# rules_python

docs/: BUILD.bazel
sphinxdocs/docs/: index.md
sphinxdocs/private/: sphinx.bzl  sphinx_build.py
sphinxdocs/tests/sphinx_docs/: BUILD.bazel  conf.py  doc1.md  doc2.md  verify_persistent_worker_output.py
